# tut_prost_rust

./: Cargo.toml  README.md  build.rs  person.proto
examples/: person.rs
src/pb/: mod.rs  person.rs
