[package]
name = "tut_proto"
version = "0.1.0"
authors = ["Leon <yanglyu.leon.7@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
prost = "0.11.3"
serde = { version = "1", features = ["derive"]}
serde_json = "1.0.91"

[build-dependencies]
prost-build = "0.11.3"